--- a/exchange/static/exchange/css/exchange.css
+++ b/exchange/static/exchange/css/exchange.css
@@ -1,3 +1,13 @@
+#header {
+    padding: 10px;
+    padding-top: 0px;
+    font-size: 20px;
+}
+
+#header a {
+    padding: 10px;
+}
+
 .user {
     padding: 5px;
 }
